# birl_trajectory_planner

./: CMakeLists.txt  package.xml  setup.py
dmp_data/new_demonstrations/home_to_prepick/: 1.npy  2.npy  3.npy  4.npy  5.npy
dmp_data/new_demonstrations/prepick_to_pick/: 1.npy  2.npy  3.npy  4.npy  5.npy  6.npy
dmp_data/new_demonstrations/prepick_to_preplace/: 1.npy  2.npy  3.npy  4.npy  5.npy
dmp_data/new_demonstrations/preplace_to_place/: 1.npy  2.npy  3.npy  4.npy  5.npy
dmp_data/processed_demonstrations/demos/: home_to_pre_pick.npy  pick_to_pre_pick.npy  place_to_pre_place.npy  pre_pick_to_pick.npy  pre_pick_to_pre_place.npy  pre_place_to_place.npy
dmp_data/processed_demonstrations/demos/home_to_prepick/: 1.npy  2.npy  3.npy  4.npy  5.npy
dmp_data/processed_demonstrations/demos/prepick_to_pick/: 1.npy  2.npy  3.npy  4.npy  5.npy
dmp_data/processed_demonstrations/demos/prepick_to_preplace/: 1.npy  2.npy  3.npy  4.npy  5.npy
dmp_data/processed_demonstrations/demos/preplace_to_place/: 1.npy  2.npy  3.npy  4.npy  5.npy
dmp_data/processed_demonstrations/figures/: home_to_pre_pick  pick_to_pre_pick  place_to_pre_place  pre_pick_to_pick  pre_pick_to_pre_place  pre_place_to_place
src/birl_trajectory_planner/: dmp_util.py  quaternion_interpolation.py  trajectory_planner.py
test_dmp/: dmp_np_forceterm.py  dmp_np_forceterm_3d.py  get_mean_demonstration.py  move_r_arm_home.py  move_r_arm_prepick.py  process_dmp.py  record_demonstration.py  test_dmp_ability.py  test_dtw.py  test_dtw_1d.py  test_dtw_demos.py  util.py
(+20 files in other folders)
